Raise trusted-sandbox probe-plan upload budget to 3 MiB.
Align flood MAX_DYNAMIC_PROBES=512 with sandbox uploadFile so dual-auth batch plans no longer fail mid-task as EXTERNAL_ARTIFACT_REJECTED.

Co-authored-by: Cursor <cursoragent@cursor.com>